--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="shortcut icon" href="../src/editable-stuff/shray.png" />
+		<link rel="icon" href="%PUBLIC_URL%favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link
 			href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
